--- a/main.css
+++ b/main.css
@@ -33,9 +33,9 @@ img {
   overflow: hidden;
 }
 
-  .header_logo-img {
-    min-width: auto;
-    max-height: 80px;
+.header_logo-img {
+  min-width: auto;
+  max-height: 80px;
   flex-shrink: 0;
 
 }
@@ -52,25 +52,206 @@ img {
 
 
 @media (min-width: 768px) {
-.main-image-img {
-  width:100%;
-  height:auto;
-  max-height:450px;
-  min-height: 300px;
-  object-fit: cover;
+  .main-image-img {
+    width: 100%;
+    height: auto;
+    max-height: 450px;
+    min-height: 300px;
+    object-fit: cover;
+
+  }
+
+  .challenges {
+    display: flex;
+    flex-direction: row;
+    overflow-x: auto;
+    gap: 1rem;
+    padding: 1rem;
+    align-content: center;
+    justify-content: center;
+  }
+  
+
+  .challenge-image {
+    border-top-right-radius: 6px;
+    border-top-left-radius: 6px;
+
+  }
+
+  .challenge-image {
+    max-width: 100%;
+    margin-bottom: 0.5rem;
+  }
+
+
+  .popular {
+    margin-top: 40px;
+    margin-bottom: 50px;
+  }
+
+  .review {
+    background-color: #ffffff;
+    border: 1px solid #ffffff;
+    padding: 1rem;
+    border-radius: 8px;
+    width: 500px;
+    display: flex;
+  }
+
+  .review_text h5 {
+    font-size: 1.2rem;
+    font-weight: 500;
+  }
+
+  .review_text p {
+    margin-top: 10px;
+    font-size: 1rem;
+    font-weight: 500;
+    width: 250px;
+  }
+
+  .review-avatar {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    margin-right: 1rem;
+  }
+
+  .story {
+    margin-top: 150px;
+  }
+
+  .story_container {
+    background-color: #011827;
+    text-align: center;
+    padding: 1rem;
+    min-height: 460px;
+  }
+
+  .story_intro {
+    color: #fff;
+    font-size: 1.55rem;
+    margin-top: 100px;
+    margin-bottom: 40px;
+    font-weight: 100;
+    margin-left: 35%;
+    margin-right: 35%;
+  }
+
+
+.story {
+  margin-top: 150px;
+  background-color: #011827;
+  color: #ffffff;
+  min-height: 600px;
 }
-.challenges {
+
+.story_container {
+  text-align: center;
+
+}
+
+.footer {
+  background-color: #011827;
+  color: #fff;
+  padding: 1rem;
+  min-height: 460px;
+}
+
+.footer_about_item1 {
+ float: left;
+ width: 400px;
+ margin: 100px;
+ margin-top: 130;
+}
+
+.footer_site-map_item2 {
+  float:inline-start;
+  margin-left: 20%;
+  margin-top: 100px;
+  margin-right: 20px;
+}
+.footer_list_contact {
+  list-style: none;
+  padding: 0;
+  font-size: 1rem;
+  font-weight: lighter;
+  margin-bottom: 20px;
+}
+
+.footer_item_site_map {
+  font-size: 1rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.footer_list_play {
+  list-style: none;
+  padding: 0;
+  font-size: 1rem;
+  font-weight: lighter;
+  margin-bottom: 40px;
+}
+
+.footer_social{
+  float:inline-start;
+  margin-left: 20%;
+  margin-top: 100px;
+  margin-right: 20px;
+}
+
+.footer_content {
+  flex-direction: column;
+  align-items: left;
+}
+
+.footer_item_follow {
+  font-size: 1rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+  min-width: 100px;
+}
+
+.footer_list_social {
+  list-style: none;
+  padding: 0;
+  font-size: 1rem;
+  font-weight: lighter;
+}
+
+.story_intro h2 {
   display: flex;
-  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+
+}
+
+.section1 h2 {
+  display: flex;
   align-content: center;
   justify-content: center;
 }
+
+.info-image {
+  float: left;
+  width: 50%;
+  height: auto;
+}
+
+.computer_karen {
+  float: right;
+  width: 50%;
+  height: auto;
+  margin-top: px;
+}
+
 }
 
 @media (max-width: 768px) {
-.header{
-  min-height: 110px;
-}
+  .header {
+    min-height: 110px;
+  }
+
   .header_top-area_left-title {
     text-align: center;
     font-size: 0.6rem;
@@ -82,10 +263,11 @@ img {
     margin-left: 8px;
   }
 
-.header_logo-img {
-  min-width: auto;
-  min-height: 75px;
-}
+  .header_logo-img {
+    min-width: auto;
+    min-height: 75px;
+  }
+
 
 }
 
@@ -98,10 +280,10 @@ img {
 
 /* Button styles */
 .main_btn {
-  display: inline-flex; 
-  justify-content: center; 
+  display: inline-flex;
+  justify-content: center;
   align-items: center;
-  padding: 1rem; 
+  padding: 1rem;
   left: 50%;
   transform: translate(-50%, -50%);
   position: absolute;
@@ -126,27 +308,41 @@ img {
   background-color: #8acfe5;
   color: #000;
   padding: 0.8rem 1.5rem;
-  border-radius:2px;
+  border-radius: 2px;
   font-weight: bold;
   border: none;
   cursor: pointer;
   text-decoration: none;
-  margin-left:115px;
+  margin-left: 115px;
 }
 
-  .main_btn {
-    display: inline-flex; 
-    justify-content: center; 
-    align-items: center;
-    padding: 1rem; 
-    left: 50%;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    width: 220px;
-    height: 50px;
-  }
+.main_btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  width: 220px;
+  height: 50px;
+}
 
-  @media (max-width: 768px) {
+.after_btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  width: 220px;
+  height: 50px;
+  margin-top: 80px;
+
+}
+
+@media (max-width: 768px) {
   .online {
     background: transparent;
     color: #9178fd;
@@ -157,10 +353,10 @@ img {
     cursor: pointer;
     margin-top: 105px;
     font-size: 0.75rem;
-    margin-left:0px;
+    margin-left: 0px;
     text-decoration: underline;
   }
-  
+
   .onsite {
     background-color: #8acfe5;
     color: #000;
@@ -172,36 +368,38 @@ img {
     margin-top: 50px;
     font-size: 1.2rem;
     text-decoration: none;
-    min-width: 260px;;
+    min-width: 260px;
+    ;
     min-height: 55px;
-    margin-left:0px;
+    margin-left: 0px;
   }
+
   .after_btn {
-    display: inline-flex; 
-    justify-content: center; 
+    display: inline-flex;
+    justify-content: center;
     align-items: center;
-    padding: 1rem; 
+    padding: 1rem;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
     width: 220px;
     height: 50px;
-    
+
   }
 }
 
 .story_btn {
   display: inline-block;
   padding: 16px 40px;
-  color: #74c6e5; 
-  font-size: 20px; 
-  font-weight: bold; 
+  color: #74c6e5;
+  font-size: 20px;
+  font-weight: bold;
   text-decoration: none;
-  border: 2px solid #74c6e5; 
-  border-radius:3px; 
-  text-align: center; 
-  cursor: pointer; 
-  background: none; 
+  border: 2px solid #74c6e5;
+  border-radius: 3px;
+  text-align: center;
+  cursor: pointer;
+  background: none;
   margin-bottom: 60px;
 }
 
@@ -238,7 +436,7 @@ img {
 
 }
 
-.book_on_site_today_button{
+.book_on_site_today_button {
   background-color: #e3170a;
   color: #fff;
   border: none;
@@ -267,41 +465,53 @@ img {
   font-size: 0.85rem;
 }
 
+@media (max-width: 768px) {
 /* Individual Review */
 .review {
   background-color: #ffffff;
   border: 1px solid #ffffff;
   padding: 1rem;
   border-radius: 8px;
-  width: 350px;
- display: flex;
+  width: 360px;
+  display: flex;
+}
 
+.review_text h5 {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.review_text p {
+  margin-top: 10px;
+  font-size: 0.7rem;
+  font-weight: 500;
 }
 
 .review-avatar {
-  width: 50px; 
+  width: 50px;
   height: 50px;
   border-radius: 50%;
-  margin-right: 1rem; 
+  margin-right: 1rem;
 }
 
-@media (max-width: 768px) {
   .review {
     display: none;
   }
- .review:first-child {
-  display: flex;
-}
-.reviews {
-  margin-top: 150px;
-  margin-bottom: 60px;
-}
+
+  .review:first-child {
+    display: flex;
+  }
+
+  .reviews {
+    margin-top: 150px;
+    margin-bottom: 60px;
+  }
 
 
 }
 
 /* popular chalenges text */
-.popular{
+.popular {
   text-align: center;
   font-size: 1.5rem;
 }
@@ -331,19 +541,22 @@ img {
 }
 
 .challenge-card h5 {
- float: right;
- margin-top: -36px;
- margin-right: 10px;
- font-size: 0.7rem;
+  float: right;
+  margin-top: -36px;
+  margin-right: 10px;
+  font-size: 0.7rem;
 }
+
 .challenge-card h3 {
   margin-left: 20px;
 }
+
 .challenge-card p {
-margin: 20px;
- }
+  margin: 20px;
+}
+
 .stars {
-  margin-left:20px;
+  margin-left: 20px;
   margin-bottom: 20px;
 }
 
@@ -360,7 +573,7 @@ margin: 20px;
   .challenge-image {
     border-top-right-radius: 6px;
     border-top-left-radius: 6px;
-    
+
   }
 
   .challenge-image {
@@ -370,7 +583,7 @@ margin: 20px;
 
 
   /* Story Section */
-  .story{
+  .story {
     margin-top: 150px;
   }
 
@@ -389,26 +602,27 @@ margin: 20px;
   }
 
   .story_description {
-    color: #b6bdb5;
+    color: #ffffff;
     font-size: 1.2rem;
   }
 
-.info-image {
-  object-fit: contain;
-  margin-bottom: 20px;
-}
+  .info-image {
+    object-fit: contain;
+    margin-bottom: 20px;
+  }
 
   /* Info Section 1 */
   .info-section_1 h2 {
-  margin-left: 20px;
+    margin-left: 20px;
   }
+
   .info-section_1 p {
     margin: 20px;
-    }
+  }
 
-.section1 {
-  text-align: start;
-}
+  .section1 {
+    text-align: start;
+  }
 
   /* Info Section 2 */
   .info-section_2 h2 {
@@ -416,6 +630,7 @@ margin: 20px;
     margin-top: 20px;
     margin-right: 5px;
   }
+
   .info-section_2 p {
     margin: 20px;
   }
@@ -446,56 +661,57 @@ margin: 20px;
     margin-top: 15px;
   }
 
-.footer_text{
-     font-size: 1rem;
-    margin-bottom: 40px;
-  }
-}
-
-  .footer_list_contact {
-    list-style: none;
-    padding: 0;
+  .footer_text {
     font-size: 1rem;
-    font-weight: lighter;
-    margin-bottom: 20px;
-  }
-
-  .footer_item_site_map {
-    font-size: 1rem;
-    font-weight:600;
-    margin-bottom: 10px;
-  }
-
-  .footer_list_play {
-    list-style: none;
-    padding: 0;
-    font-size: 1rem;
-    font-weight: lighter;
     margin-bottom: 40px;
   }
 
-  .footer_item {
-    font-size: 1rem;
-    margin-bottom: 5px;
-  }
- 
-  .footer_content {
-    flex-direction: column;
-    align-items: left;
-  }
 
-  .footer_item_follow {
-    font-size: 1rem;
-    font-weight:600;
-    margin-bottom: 10px;
-    min-width: 100px;
+.footer_list_contact {
+  list-style: none;
+  padding: 0;
+  font-size: 1rem;
+  font-weight: lighter;
+  margin-bottom: 20px;
 }
 
-.footer_list_social{
-    list-style: none;
-    padding: 0;
-    font-size: 1rem;
-    font-weight: lighter;
+.footer_item_site_map {
+  font-size: 1rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
 
-  
+.footer_list_play {
+  list-style: none;
+  padding: 0;
+  font-size: 1rem;
+  font-weight: lighter;
+  margin-bottom: 40px;
+}
+
+.footer_item {
+  font-size: 1rem;
+  margin-bottom: 5px;
+}
+
+.footer_content {
+  flex-direction: column;
+  align-items: left;
+}
+
+.footer_item_follow {
+  font-size: 1rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+  min-width: 100px;
+}
+
+.footer_list_social {
+  list-style: none;
+  padding: 0;
+  font-size: 1rem;
+  font-weight: lighter;
+
+
+}
 }
