--- a/main.css
+++ b/main.css
@@ -1,3 +1,15 @@
+#navigation {
+  background: transparent; 
+  border: none; 
+  padding: 20px; 
+  cursor: pointer; 
+  display: flex; 
+  height: 100px;
+  width: 100px;
+}
+
+
+
 /* General Styling */
 * {
   box-sizing: border-box;
@@ -23,7 +35,7 @@ img {
   padding: 1rem;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   min-height: 110px;
 }
 
@@ -52,6 +64,14 @@ img {
 
 
 @media (min-width: 768px) {
+  .popup-container {
+    display: none; 
+  }
+
+  #navigation {
+ display: none;
+  }
+
   .main-image-img {
     width: 100%;
     height: auto;
@@ -452,8 +472,8 @@ img {
     margin-left: 20px;
     margin-bottom: 40px;
     margin-top: 30px;
-    font-size: 0.95rem;
-    width: 200px;
+    font-size: 0.5rem;
+    width: 100px;
     text-align: center;
     justify-content: center;
   }
@@ -759,4 +779,60 @@ font-size: 1rem;
 font-weight: lighter;
 
 
+}
+
+/*----------------------------------------------------------------------------------------------------------------------------*/
+.popup-container {
+  display: none;
+  position: fixed; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5); 
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  z-index: 1000; 
+
+}
+
+.popup-menu {
+  display: none;
+  background-color: #011827;
+  color: #fff;
+  z-index: 1001; 
+  width: 90%;
+  height: 90%;
+display: flex;
+justify-content: space-evenly;
+align-items: center;
+  
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: 2.6rem;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.popup-menu ul li {
+  margin: 4rem; 
+}
+
+.close-popup {
+  position: absolute;
+  top: 10%;
+  right: 15%;
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 2rem;
+  z-index: 1002;
 }
