--- a/main.css
+++ b/main.css
@@ -558,23 +558,48 @@ img {
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.5);
+    display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000;
     box-sizing: border-box;
     padding: 5%;
+    opacity: 0; 
+    visibility: hidden; 
+    transition: opacity 0.5s ease, visibility 0.5s ease; 
+  }
+  
+  .popup-container.show {
+    opacity: 1; 
+    visibility: visible; /
   }
 
   .popup-menu {
     background-color: #011827;
     color: #fff;
     z-index: 1001;
-    height: 90%;
+    width: 100%; 
+    height: 100%; 
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    overflow: auto; 
+    padding: 1rem;
+    box-sizing: border-box;
+    animation: fadeIn 0.5s ease; 
   }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: scale(0.9); /* Slight zoom-in effect */
+    }
+    to {
+      opacity: 1;
+      transform: scale(1);
+    }
+    }
 
   .popup-menu ul {
     list-style: none;
